feat: user dto's, swagger has been updated
