# server/internal/service/user_service.go
@@ -1,6 +1,8 @@
 package service
 
 import (
+	"errors"
+
 	"github.com/google/uuid"
 	"github.com/xinbreak/movie-web-app/internal/models"
 	"github.com/xinbreak/movie-web-app/internal/repository"
@@ -16,6 +18,19 @@ func NewUserService(repo repository.UserRepository) *UserService {
 
 func (s *UserService) RegisterUser(user *models.User) error {
 	return s.repo.Create(user)
+}
+
+func (s *UserService) Login(email, password string) (*models.User, error) {
+	user, err := s.repo.GetByEmail(email)
+	if err != nil {
+		return nil, err
+	}
+
+	if user.Password != password {
+		return nil, errors.New("invalid password")
+	}
+
+	return user, nil
 }
 
 func (s *UserService) GetUser(id uuid.UUID) (*models.User, error) {
